# docker_mcp_gateway

./: .env.example  .env.remote  .env.remote.example  .gitignore  README.md  claude.md  deploy.sh  deploy_remote.sh  pyproject.toml  remote_deploy.sh
config/: containers.yaml
data/: stats.json
src/docker_mcp_gateway/: __init__.py  __main__.py  app.py  config.py  docker_manager.py  docker_parser.py  models.py  proxy.py
web/: index.html
web/css/: style.css
web/js/: app.js
